package com.ycorn.patterns.flyweight;

import lombok.AllArgsConstructor;
import lombok.Getter;

/**
 * @author : Jim Wu
 * @version 1.0
 * @function :
 * @since : 2020/4/30 10:41
 */

@AllArgsConstructor
@Getter
public class User {

    private String name;

}
