package com.ycorn.patterns.flyweight;


/**
 * @author : Jim Wu
 * @version 1.0
 * @function :
 * @since : 2020/4/30 10:41
 */

public abstract class Website {

    public abstract void use(User user);
}
